# PDPCLI

./: .gitignore  .pre-commit-config.yaml  FirstTimeSetUp.md  LICENSE  README.md  pyproject.toml
experiments/: evaluate.py  validate.py
src/pdpcli/: __init__.py  cli.py  evaluate.py  processor.py
